--- a/src/components/app/template.html
+++ b/src/components/app/template.html
@@ -1,39 +1,25 @@
-<md-sidenav
-  class="md-sidenav-right"
-  md-component-id="right"
-  md-is-locked-open="$mdMedia('gt-md')"
-  md-whiteframe
->
-  <md-toolbar hide-gt-md>
-    <div class="md-toolbar-tools">
-      <h4 flex>Your Plate</h4>
-      <md-button aria-label="Menu" class="md-icon-button" ng-click="$ctrl.closeSidenav()" hide-gt-md>
-        <md-icon md-svg-src="../../../node_modules/material-design-icons/navigation/svg/production/ic_close_48px.svg"></md-icon>
-      </md-button>
-    </div>
-  </md-toolbar>
-  <md-content>
-    <md-list ng-cloak>
-      <md-list-item aria-label="Dashboard" ng-click="$ctrl.closeSidenav()" ui-sref="app.dashboard">
-        <img alt="NG Restaurant Logo" layout-padding src="../../../node_modules/material-design-icons/maps/svg/production/ic_restaurant_48px.svg">
-      </md-list-item>
-    </md-list>
-  </md-content>
-</md-sidenav>
 <div layout="column" layout-fill style="overflow-y: overlay;">
   <md-toolbar md-scroll-shrink ng-if="true">
     <div layout="row">
       <md-toolbar-filler hide-gt-md layout="row" layout-align="center center">
-        <md-icon md-svg-src="../../../node_modules/material-design-icons/">
+        <md-icon md-svg-src="../../../node_modules/material-design-icons/maps/svg/production/ic_restaurant_24px.svg"></md-icon>
+      </md-toolbar-filler>
       <div class="md-toolbar-tools">
-        <md-button aria-label="Menu" class="md-icon-button" ng-click="$ctrl.toggleLeft()" hide-gt-md>
-          <md-icon md-svg-src="../../../node_modules/material-design-icons/navigation/svg/production/ic_menu_48px.svg"></md-icon>
-        </md-button>
         <h2 flex md-truncate>{{ $ctrl.lmTitle }}</h2>
+        <md-button aria-label="On Your plate" class="md-icon-button" ng-click="$ctrl.toggleRight()" hide-gt-md>
+          <md-icon md-svg-src="../../../node_modules/material-design-icons/action/svg/production/ic_shopping_basket_24px.svg"></md-icon>
+        </md-button>
       </div>
     </div>
   </md-toolbar>
   <lm-loader layout="column" layout-align="start stretch" ng-if="$ctrl.isLoading"></lm-loader>
   <md-content ui-view="app"></md-content>
 </div>
-
+<md-sidenav
+  class="md-sidenav-right"
+  md-component-id="right"
+  md-is-locked-open="$mdMedia('gt-md')"
+  md-whiteframe
+>
+  <nr-plate></nr-plate>
+</md-sidenav>
